--- a/Cradle/.settings/org.eclipse.wst.common.component
+++ b/Cradle/.settings/org.eclipse.wst.common.component
@@ -5,6 +5,6 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <property name="java-output-path" value="/Cradle/target/classes"/>
-        <property name="context-root" value="abc"/>
+        <property name="context-root" value="Cradle"/>
     </wb-module>
 </project-modules>
